# Aki-Desktop

./: .clang-format  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
.trae/specs/aki-desktop/: checklist.md  spec.md  tasks.md
dm/: meson.build
dm/src/: main.cpp
include/aki/: input.h  output.h  server.h  view.h
include/aki/config/: config.h  lua_api.h
include/aki/ipc/: plugin_host.h
include/aki/render/: effects.h  renderer.h  shader.h
shaders/: blur.glsl  common.glsl  rounded_rect.glsl
src/: input.cpp  main.cpp  output.cpp  server.cpp  view.cpp
src/config/: config.cpp  lua_api.cpp
src/ipc/: plugin_host.cpp
src/render/: effects.cpp  renderer.cpp  shader.cpp
src/utils/: log.cpp  log.h  time.cpp  time.h
